# CMSC858N-Term-Project

./: .gitignore  CMakeLists.txt  README.md  flow.cpp
bk/: CMakeLists.txt  flow.cpp
include/: IO.h  dataGen.h  graph.h  graphUtils.h
include/parser/: parser.h
include/syncPar/: example_flow.h  flow.h  newflow.h  seq_flow.h
parser/: CMakeLists.txt  dimacsToCSR.cpp  dimacsToParlay.py  dimacs_to_csr.cpp  hash_map.h  parser.cpp  parser.h
src/: CMakeLists.txt
src/bk/: CMakeLists.txt  driver.cpp  flow.cpp
src/syncPar/: CMakeLists.txt  driver.cpp  flow.cpp  flow.h
syncPar/: CMakeLists.txt  flow.cpp  flow.h
